item get api filters
